--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="styles.css">
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
   </head>
@@ -14,8 +15,9 @@
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
+          var $tweet = $('<div class=\'tweet\'><p><span class=\'username\'>' + tweet.user + '</span><span class=\'handle\'> @' + tweet.user + '</span>' +
+            '<span class=\'timestamp\'>' + ' \xB7 ' + tweet.created_at + '</span></br><span>' + tweet.message + '</span></p></div>');
+          //$tweet.text('@' + tweet.user + ': ' + tweet.message + '\xB7' + tweet.created_at);
           $tweet.appendTo($body);
           index -= 1;
         }
