--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <script src="data_generator.js"></script>
   </head>
   <body>
+    <div id='container'>
+      <div id='leftsidebar'></div>
+      <div id='timeline'></div>
+      <div id='rightsidebar'></div>
+      <div id='header'>
+        <img id='twit' src='graphics/twit-sm.png'>
+      </div>
+    </div>
+
+
     <script>
 
       $(document).ready(function(){
         var $body = $('body');
-        $body.html('');
+        //$body.html('');
 
         var index = streams.home.length - 1;
         while(index >= 0){
@@ -18,7 +28,11 @@
           var $tweet = $('<div class=\'tweet\'><p><span class=\'username\'>' + tweet.user + '</span><span class=\'handle\'> @' + tweet.user + '</span>' +
             '<span class=\'timestamp\'>' + ' \xB7 ' + tweet.created_at + '</span></br><span>' + tweet.message + '</span></p></div>');
           //$tweet.text('@' + tweet.user + ': ' + tweet.message + '\xB7' + tweet.created_at);
-          $tweet.appendTo($body);
+          //$tweet.appendTo($body);
+          //$body.find('#timeline').appendTo($tweet);
+          $tweet.appendTo(($body).find('#timeline'));
+
+
           index -= 1;
         }
 
