Add sidebar section placeholders

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   </head>
   <body>
     <div id='container'>
-      <div id='leftsidebar'></div>
+      <div id='leftsidebar'>
+        <div id='activeuser'>stuff</div>
+        <div id='trending'>trends for you</div>
+      </div>
       <div id='timeline'></div>
-      <div id='rightsidebar'></div>
+      <div id='rightsidebar'>
+        <div id='followrecs'>who to follow</div>
+      </div>
       <div id='header'>
         <img id='twit' src='graphics/twit-sm.png'>
       </div>
