--- a/index.html
+++ b/index.html
@@ -6,69 +6,61 @@
     <script src="data_generator.js"></script>
   </head>
   <body>
-    <div id='container'>
-      <div id='leftsidebar'>
-        <div id='activeuser'>stuff</div>
-        <div id='trending'>trends for you</div>
+    <div id="container">
+        <div id="leftsidebar">
+        <div id="activeuser">
+          <div id="me">me</div>
+          <div id="photo">photo</div>
+          <div id="identity">
+            <h3 id="identity-name">username</h3>
+            <p id="identity-handle">@handle</p>
+          </div>
+        </div>
+        <div id="trending">trends for you</div>
       </div>
-      <div id='timeline'></div>
-      <div id='rightsidebar'>
-        <div id='followrecs'>who to follow</div>
+      <div id="timeline">
       </div>
-      <div id='header'>
-        <img id='twit' src='graphics/twit-sm.png'>
+      <div id="rightsidebar">
+        <div id="followrecs">who to follow</div>
+      </div>
+      <div id="header">
+        <img id="twit" src="graphics/twit-sm.png">
       </div>
     </div>
 
 
     <script>
-
-      $(document).ready(function() {
+      var loadTweets = function(user) {
         var $body = $('body');
-        var index = streams.home.length - 1;
+        $('#timeline').children().remove();
+        $('#timeline').append('<button type="button" id="refresh">See new Twittles<\/button>')
+        var stream;
+        user === undefined ? stream = streams.home : stream = streams.users[user];
+        var index = stream.length - 1;
         while(index >= 0) {
-          var tweet = streams.home[index];
-          var $tweet = $('<div class=\'tweet\'><p><span class=\'username\'><a href=\'#\'>' + 
-            tweet.user + '</a></span><span class=\'handle\'> @' + tweet.user + '</span>' +
-            '<span class=\'timestamp\'>' + ' \xB7 ' + tweet.created_at + '</span></br><span>' + 
-            tweet.message + '</span></p></div>');
+          var tweet = stream[index];
+          var $tweet = $('<div class="tweet"><p><span class="username"><a href="#">' + 
+            tweet.user + '<\/a><\/span><span class="handle"> @' + tweet.user + '<\/span>' +
+            '<span class="timestamp">' + ' \xB7 ' + tweet.created_at + '<\/span><\/br><span>' + 
+            tweet.message + '<\/span><\/p><\/div>');
           $tweet.appendTo(($body).find('#timeline'));
           index -= 1;
         }
+      };
+ 
+      $('#twit').on('click', function() {
+        loadTweets();
+      });
 
-        $('.username').on('click', function() {
-          alert($(this).text());
-          var user = $(this).text();
-          $('#timeline').children().remove();
-          var index = streams.users[user].length - 1;
-          while(index >= 0) {
-            var tweet = streams.users[user][index];
-            var $tweet = $('<div class=\'tweet\'><p><span class=\'username\'><a href=\'#\'>' + 
-            tweet.user + '</a></span><span class=\'handle\'> @' + tweet.user + '</span>' +
-            '<span class=\'timestamp\'>' + ' \xB7 ' + tweet.created_at + '</span></br><span>' + 
-            tweet.message + '</span></p></div>');
-          $tweet.appendTo(($body).find('#timeline'));
-          index -= 1;
-          }
-             //var timeline = $body.find('#timeline');
-             //timeline.children.remove();
-             // var tweet = $(this).closest('.tweet');
-             // var user = tweet.user;
-             // alert(user);
-             // timeline.remove('.tweet');
-             // var index = streams.users[user].length - 1;
-             // while(index >= 0) {
-             //   var $tweet = $('<div class=\'tweet\'><p><span class=\'username\'><a href=\'#\'>' + 
-             //   tweet.user + '</a></span><span class=\'handle\'> @' + tweet.user + '</span>' +
-             //   '<span class=\'timestamp\'>' + ' \xB7 ' + tweet.created_at + '</span></br><span>' + 
-             //   tweet.message + '</span></p></div>');
-             // $tweet.appendTo(($body).find('#timeline'));
-             // index -= 1;
-        });
+      $(document).on('click', '.username', function() {
+        var user = $(this).text();
+        //alert(user);
+        loadTweets(user);
+      });
 
-         
-       // };
-
+      $(document).ready(function() {
+        var $body = $('body');
+        loadTweets();
       });
 
     </script>
