--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           </div>
         </div>
       </div>
-      <div id="timeline">
-      </div>
+      <div id="timeline"></div>
       <div id="rightsidebar">
         <div id="followrecs">who to follow</div>
       </div>
@@ -43,16 +42,17 @@
 
     <script>
 
-      var loadTweets = function(user) {
-        //debugger;
-        $('#trends').empty();
+      var loadTweets = function(user, tagFilter) {
+        user === 'yourstruly' || user === undefined ? user = 'home' : user = user;
+        if(user === 'home') {
+          $('#trends').empty();          
+        }
         var tagArray = [];
-        user === 'yourstruly' ? user = undefined : user = user;
         var $body = $('body');
         $('#timeline').children().remove();
         $('#timeline').append('<button type="button" id="refresh">See new Tweetles<\/button>');
         var stream;
-        user === undefined ? stream = streams.home : stream = streams.users[user];
+        user === 'home' ? stream = streams.home : stream = streams.users[user];
         var index = stream.length - 1;
         while(index >= 0) {
           var tweet = stream[index];
@@ -68,15 +68,24 @@
             formattedMessage = formatted[1];
           } 
           var $tweet = $('<div class="tweet"><div class="avatar"><img src="graphics/' + tweet.user + '.jpg"></div><div class="tweet-content"><p><span class="username"><a href="#">' + tweet.user + '<\/a><\/span><span class="handle"> @' + tweet.user + '<\/span>' +
-            '<span class="timestamp">' + ' \xB7 ' + relDate + '<\/span><\/br><span>' + 
+            '<span class="timestamp">' + ' \xB7 ' + relDate + '<\/span><\/br><span class="message">' + 
             formattedMessage + '<\/span><\/p><\/div><\/div>');
           // add occurrance of tweet.user to list of tags for later sorting by frequency
           tagArray.push('<\/span><span class="hashtag"><a href="#">@' + tweet.user + '<\/a><\/span>');
-          $tweet.appendTo(($body).find('#timeline'));
+          // only add tweets including a hashtag or username if the tag argument is passed
+          if(!tagFilter) {
+            $tweet.appendTo(($body).find('#timeline'));
+          } else {
+            if(formattedMessage.includes(tagFilter)) {
+              $tweet.appendTo(($body).find('#timeline'));
+            }
+          }
           index -= 1;
         }
         // send tags for sorting and listing in Trends sidebar
-        populateTrends(tagArray);
+        if(user === 'home') {
+          populateTrends(tagArray);          
+        }
       };
 
       // format hashtags and mentions within messages
@@ -185,6 +194,21 @@
         var user = $(this).closest('.tweet').find('.username').text(); 
         switchIdentity(user);
         loadTweets(user);
+      });
+
+      // change tweet list based on trend clicked
+      $(document).on('click', '#trends a', function() {
+        var user;
+        if(this.textContent.startsWith('@')) {
+          user = this.textContent.substring(1);
+          switchIdentity(user);
+          loadTweets(user);
+        } else {
+          user = 'yourstruly';
+          var tagFilter = this.textContent;
+          switchIdentity();
+          loadTweets(user, tagFilter);
+        }
       });
 
       $(document).ready(function() {
